# pupSAT

./: CMakeLists.txt  README.md
examples/: example.cnf  test.cnf
improv/: a.out  main.cu
src/: CMakeLists.txt  purrsat.cu
